cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 11)

add_executable(01_SortAbs
        01_SortAbs.cpp)

add_executable(02_SortCaseInsensitively
        02_SortCaseInsensitively.cpp)

add_executable(03_SortedStrings
        03_SortedStrings.cpp)

add_executable(04_Names1
        04_Names1.cpp)
