cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 11)

add_executable(01_EnsureEqual
        01_EnsureEqual.cpp)

add_executable(01_LectureTitle
        01_LectureTitle.cpp)

add_executable(02_InvertibleFunction
        02_InvertibleFunction.cpp)

add_executable(03_InvertibleFunctionWithMult
        03_InvertibleFunctionWithMult.cpp)

add_executable(04_ReadFile
        04_ReadFile.cpp)

add_executable(05_WriteToFile
        05_WriteToFile.cpp)

add_executable(06_Precision
        06_Precision.cpp)

add_executable(07_Table
        07_Table.cpp)
