cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 17)

add_executable(01_LectureTitle
        01_LectureTitle.cpp)

add_executable(02_InvertibleFunction
        02_InvertibleFunction.cpp)

add_executable(03_InvertibleFunctionWithMult
        03_InvertibleFunctionWithMult.cpp)

add_executable(04_ReadFile
        04_ReadFile.cpp)

add_executable(05_WriteToFile
        05_WriteToFile.cpp)

add_executable(06_Precision
        06_Precision.cpp)

add_executable(07_Table
        07_Table.cpp)

add_executable(08_StudentsList
        08_StudentsList.cpp)

add_executable(09_1_Rational_interface
        09_1_Rational_interface.cpp)

add_executable(09_2_Rational_eq_add_sub
        09_2_Rational_eq_add_sub.cpp)

add_executable(09_3_Rational_mult_div
        09_3_Rational_mult_div.cpp)

add_executable(09_4_Rational_io
        09_4_Rational_io.cpp)

add_executable(09_5_Rational_map
        09_5_Rational_map.cpp)

add_executable(01_EnsureEqual
        10_EnsureEqual.cpp)

add_executable(11_Rational_throw
        11_Rational_throw.cpp)

add_executable(12_Rational_calc
        12_Rational_calc.cpp)
