cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 11)

add_executable(01_sum
        01_sum.cpp)
add_executable(02_cmpStrings
        02_cmpStrings.cpp)
add_executable(03_equation
        03_equation.cpp)
add_executable(04_division
        04_division.cpp)
add_executable(05_countPrice
        05_countPrice.cpp)
add_executable(06_evenNums
        06_evenNums.cpp)
add_executable(07_secondOccurrence
        07_secondOccurrence.cpp)
add_executable(08_greatestCommonDivisor
        08_greatestCommonDivisor.cpp)
add_executable(09_decimalToBinary
        09_decimalToBinary.cpp)

add_executable(main
        main.c)
