cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 11)

add_executable(01_Factorial
        01_Factorial.cpp)

add_executable(02_Palindrome
        02_Palindrome.cpp)

add_executable(03_PalindromFilter
        03_PalindromFilter.cpp)

add_executable(04_UpdateIfGreater
        04_UpdateIfGreater.cpp)

add_executable(05_MoveStrings
        05_MoveStrings.cpp)

add_executable(06_Reverse
        06_Reverse.cpp)

add_executable(07_Reversed
        07_Reversed.cpp)

add_executable(08_AverageTemperature
        08_AverageTemperature.cpp)

add_executable(09_Queue
        09_Queue.cpp)

add_executable(10_MonthlyTasks
        10_Concerns.cpp)

add_executable(11_IsAnagram
        11_IsAnagram.cpp)

add_executable(12_Capitals
        12_Capitals.cpp)

add_executable(13_BusStops
        13_Buses1.cpp)