cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 17)

add_executable(01_Matrix_sum
        01_Matrix_sum.cpp)

add_executable(02_Average_temp
        02_Average_temp.cpp)

add_executable(03_Weight
        03_Weight.cpp)

add_executable(04_Regions_find_max
        04_Regions_find_max.cpp)

add_executable(05_Team_tasks
        05_Team_tasks.cpp)
