cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 17)

add_executable(08_Decompose_buses
        08_Decomposition_Buses.cpp)

add_executable(09_GetDistinctRealRootCount
        09_Test_GetDistinctRealRootCount.cpp)

add_executable(10_Test_Person
        10_Test_Person.cpp)

add_executable(11_Test_Rational
        11_Test_Rational.cpp)

add_executable(12_Test_IsPalindrom
        12_Test_IsPalindrom.cpp)
