cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 17)

add_executable(13_Sum_reverse_sort
        13_Sum_reverse_sort.cpp)

add_executable(14_PhoneNumber_Decomposition
        14_PhoneNumber_Decomposition.cpp)

add_executable(16_Decomposition_Buses_2
        16_Decomposition_Buses_2/main.cpp
        16_Decomposition_Buses_2/bus_manager.cpp
        16_Decomposition_Buses_2/query.cpp
        16_Decomposition_Buses_2/responses.cpp)
