cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 17)

add_executable(17_VectorPart
        17_VectorPart.cpp)

add_executable(18_Set_Parts
        18_Find_Greater_Elements.cpp)

add_executable(19_Split
        19_Split.cpp)

add_executable(20_RemoveDuplicates
        20_RemoveDuplicates.cpp)

add_executable(21_Permutations
        21_Permutations.cpp)

add_executable(22_PrintStats
        22_PrintStats.cpp)
