cmake_minimum_required(VERSION 3.17)
project(CPP_Yandex_week1)

set(CMAKE_CXX_STANDARD 17)

add_executable(28_Inheritance
        28_Inheritance.cpp)

add_executable(29_Notifications.cpp
        29_Notifications.cpp)

add_executable(30_Figures.cpp
        30_Figures.cpp)

add_executable(31_Refactor
        31_Refactor.cpp)
